CSS fix for overflow being hidden.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
-#viewport {
+.gridUnit, #viewport {
     overflow: visible;
 }
